--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/1.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/1.md
@@ -2,7 +2,7 @@
 title = "1"
 
 +++
-Slökās 1 to 16: Gangā Dēvī's obeisance to the poets who influenced her.
+Slokas 1 to 16: Gangā Dēvī's obeisance to the poets who influenced her.
 
 1. May the elephant-faced God, who, like the divine Kalpavrksa fulfils ihe desires of those that sur render to His Grace, be propitious to the good.  
 2. For the sake of wisdom, I prayerfully approach God Śiva and His Spouse, who embody the light of Universal Consciousness and who bear the form of the Creator's model for making man and woman.  
@@ -21,7 +21,7 @@ Slökās 1 to 16: Gangā Dēvī's obeisance to the poets who influenced her.
 15. We respectfully greet the great poet Gangādhara as a second Vyāsa, in that he has made the story of the Bhārata actually seen by the device of dramatization.  
 16. May the lord of poets, Visvanātha, flourish long; for it is by his grace, even in individuals like my self, has dawned a sense of omniscience.  
 
-Shlokās 17 to 24: Ganga Dēvi un-literary criticism.
+Shlokas 17 to 24: Ganga Dēvi un-literary criticism.
 
 17. There is sense in some, idea in some, and sen timent in some; but nowhere is found a worl: where a!! these exist together.  
 18. Even as a single salt particle from an oyster shell spoils the liquid essence of black sandal, so too, even the smallest flaw found in a poetic work renders it censurable.  
@@ -45,7 +45,7 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 33. His fame, as a person of delightful qualities, spread so envelopingly that it appeared like a coverlet of white silk on the oval shape of the universe.  
 34. The sword wielded by his hand, terrible as it looked, feasting on the life-breath of his royal opponents, begot glory, even as a ferocious serpent feeding on air produces its cover of slough.  
 35. His right hand which to all appearance seemed to be drawing the sword was in fact practising the art of drawing, by her braided hair, the goddess of prosperity of his adversaries.  
-36. Having, after a long time, come to him who was ever wakeful in protecting this universe, Goddess Lakşmi never again remembered Vișnu who was in sensible, wrapped up in yogic sleep.  
+36. Having, after a long time, come to him who was ever wakeful in protecting this universe, Goddess Lakṣmi never again remembered Vișnu who was in sensible, wrapped up in yogic sleep.  
 37. The tree of Dharma which had withered away by the scorching heat of this Kali age sprouted again by the water that flowed (from his hands) while making gifts of charity.  
 38. His very enemy-kings who bore on their head scars caused by rubbing against his foot-rest stood on all quarters as so many pillars of his triumph.  
 39. The reputations of his adversaries, as if they were enveloped by rows of flames of the fire of his prowess, looked dark in appearance.  
@@ -56,7 +56,7 @@ Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
 Shlokas 43 to 66: The City of Vijayanagar.  
 43. He who augmented his riches by conquest, had the famous Vijayanagara for his capital city. That city won the approbation of knowing men, as Indra's Amarāvati, won that of the gods.  
 44. As if in rivalry with the heavenly Ganges that flowed round the borders of swargaloka, the river Tungabhadra encircled the city as a formidable moat.  
-45. The city was also surrounded by ramparts on all sides which were high as the Cakrāçala mountains; and it had the beauty of a water-trench round the creeper Lakşmi and looked like the navel of goddess Earth.  
+45. The city was also surrounded by ramparts on all sides which were high as the Cakrāçala mountains; and it had the beauty of a water-trench round the creeper Lakṣmi and looked like the navel of goddess Earth.  
 46. Lofty and gem-set towers like the peaks of the Sumēru emitting rainbow colours adorned the city.  
 47. The city was also surrounded by pleasure groves which looked like abodes of Spring and which were full of flowering trees like campaka, asőka, nāga and kēsara.  
 48. The pleasure-hillocks in the city were frequented by the musk deer that sought the shade of the plantains and karpūra plants in them. These hillocks looked like the veritable hiding places of the God of Love.  
@@ -83,13 +83,14 @@ Slökās 67 to 75: Bukka as king. Of special interest is the mention of Devīyi,
 
 67. Installed in that city, he, of undiminished prowess, ruled over the earth even as Indra ruled the heavenly regions from his seat in Amarāvati.  
 68. By contemplating on his prosperity that was at the service of friends, and his politics that was wide and comprehensive, his subjects imagined that Manu himself had in him his second birth.  
-69. Though impartial to all the three puruşārtas dharma, artha and kāma—the king, who was the idol of all virtuous people, had a special regard for dharma, even as Vişnu, the Lord of all, has for satva, among his three guņas--satva, rajas and tamas.  
+69. Though impartial to all the three puruṣārtas dharma, artha and kāma—the king, who was the idol of all virtuous people, had a special regard for dharma, even as Viṣnu, the Lord of all, has for satva, among his three guņas--satva, rajas and tamas.  
 70. His hand gave freely, his ear heard the Sāstras well, his head was always crowned with the sandals of Lord Siva. The sense of decorative fineness that he thereby evinced became the means of his achieving his desire to get and keep prosperity.  
 71. The kings that ruled over the territories of which the mountains of Vindhya, Malaya, Astha and Rõhana were the four boundaries paid homage to him and those that were enemies shook with fear.  
 72. Always awake at his post of guarding the kingdom that came to him from his ancestors in an unbroken line of succession, the king enjoyed the immense pleasures befitting his royal rank yet with complete detachment.
-73. Like Lakşmi to Nārāyana and Pārvati to Sankara, queen Devāyi was to the king the chosen consort.  
+73. Like Lakṣmi to Nārāyana and Pārvati to Sankara, queen Devāyi was to the king the chosen consort.  
 74. Though the king had other wives also, she alone became the object of his love and regard, even as Rõhiņi to the moon among celestial luminaries.  
 75. The brave king who was pleasing like the full moon to the eyes of the people of Karnāța dwelt along at the city of Vijaya and enjoyed the delights of his youth with her who was his heart's beloved. 
     
 Thus ends the first canto of Virakamparāya çaritam called Madhurāvijayam, composed by Sri Gangā Dēvi.
-Obeisance to Goddess Minākşi !
+
+Obeisance to Goddess Minākṣi !
