--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/3.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/3.md
@@ -22,7 +22,7 @@ Shlokas 1 to 20: The early training of Kampana. His bodily charm and qualities a
 15. The prince had his long tuft of his hair dressed with red blossom which looked like emblems expressing red hearts of beautiful women.  
 16. His body and prowess grew side by side. Side by side also did his eyes and fame become more and more white-coloured. His neck, along with his qualities, expanded increasingly. And both his mind and voice together gained in depth.  
 17. The king, seeing that the prince had attained his youthhood, married him to several princesses; and the unions partook the grandeur of the ocean receiving the rivers at the advent of the rainy season.  
-18. Like Sasi to Cakra (Indra), Ramā (Lakşmi) to Sarñgin (Vișnu), and Sati (Pārvati) to śambhu (Śiva).... (possibly, the name of the poetess who was his principal consort is introduced).  
+18. Like Sasi to Cakra (Indra), Ramā (Lakṣmi) to Sarñgin (Vișnu), and Sati (Pārvati) to śambhu (Śiva).... (possibly, the name of the poetess who was his principal consort is introduced).  
 19. The prince enjoyed conjugal happiness with that beautiful-looking princess. They loved each other so well and their happiness was so perfect that even the gods could not but feel envious.  
 20. Perfectly disciplined as the prince was, the king one day wishing to make him famous by the conquest of the enemies began to give him pregnant words of advice.
 
@@ -61,5 +61,5 @@ MADHURAVIJAY AM
 worthy part of Sri Rāma in reducing him you will be rendering a service to the world and allay affliction.”
 44. Having delivered this speech, the king stop ped, even as the cloud does after pouring down its watery contents. The prince bowed low, and took to heart, like the good son he was, the advice of his father.  
 45. Then the king took off invaluable ornaments from his own person and adorned the prince with them. And, after fixing, that the latter should start on his vic torious expedition on the next day, he retired to his own apartments in an elated mood.  
-46. The sun, as if anxious to inform the serpent king who bore this earth (Sēşa) that his burden would soon be lightened, sank in haste into the nether regions.  
+46. The sun, as if anxious to inform the serpent king who bore this earth (Sēṣa) that his burden would soon be lightened, sank in haste into the nether regions.  
 47. The prince, after finishing his daily worship of the sandhya, and after acquainting his eager attend ants with the commands of his father and dismissing them, entered his private apartments to enjoy the com pany of his beautiful princesses.  
