--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/4.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/4.md
@@ -85,7 +85,7 @@ a close likeness to a collection of glow-worms in the darkness of the dust.
 57. The blood-stained sword-blades waving in the hands of heroic warriors appeared like the lolling tongue of Yama eager to make a meal of them.  
 58. In the countless rivers of blood which began to flow on all sides, the faces of soldiers cut off by the bhalla arrow looked like lotuses.  
 59. The arms of kings severed by swords resembled the trunks of elephants but were mistaken for snakes by the eagles that snatched them away.  
-60. The blood flowing from human trunks was very much liked by the Rākşasis who deftly seated themselves on the trunks of elephants as if on tops of places.  
+60. The blood flowing from human trunks was very much liked by the Rākṣasis who deftly seated themselves on the trunks of elephants as if on tops of places.  
 61. Brave fighters sent to (everlasting) sleep by enemy arrows on the protrusion of their elephants, soon woke up on the pot-like breasts of divine damsels.  
 62. Then the army of the Tamil king routed by the mighty forces of Kampaņa took to flight.  
 63. Some men fleeing in great disorder let fall their weapons in great terror and swore they would never fight again.  
