--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/5.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/5.md
@@ -5,12 +5,12 @@ title = "5"
 
 Shlokas 1 to 11: Kampana installed himself Governor of his father at Marakatanagara (Kanci) and established good government.  
 1. Then in the great city called Marataka which was like an ornament of this earth, king Kampaņa established himself and ruled the earth peacefully and well.  
-2. His subjects thought that he was another incarnation of Vişnu that had come down to this earth, . because he was so victorious, and such a favourite of gods and virtuous men.  
+2. His subjects thought that he was another incarnation of Viṣnu that had come down to this earth, . because he was so victorious, and such a favourite of gods and virtuous men.  
 wess was re
 3. His prowess was recognised everywhere; his actions were always fruitful. He increased the scope of negotiation among other strategems in achieving his purpose. Highly intelligent and politic, he was. There was something original in his statecraft, which showed he was a real master.  
 4. Even as the sun with his bright rays unveils every object on earth, the king, by his skilful employ ment of spies, knew everything that was being done by friends and foes alike.  
 5. The system of light taxation which he practised pleased his subjects in his kingdom, and earth herself showed a great satisfaction by her excellent yield of corn and other produce.  
-6. Earth, by finding rest on his strong, attractive, ornamented and liberal hands, lightened the burden of Sēşa who was her prime support.  
+6. Earth, by finding rest on his strong, attractive, ornamented and liberal hands, lightened the burden of Sēṣa who was her prime support.  
 7. The threshold of his palace was ever thronged with elephants, and also kings waiting for audience. The former made it muddy with their flowing ichor, while the latter made it dry with gem-dusts falling down from ornaments broken as a result of jostling.  
 8. Every day kings that had cast off their old enmity rubbed their forehead against his royal foot stool. And their resultant change of fortune suggested the idea that new letters of prosperity were written on their foreheads (in lieu of those that were already there from their birth).  
 9. The royal threshold was always beseiged by crowds of kings, such as of Magadha, Māļava, Sevuna, Simhala, Dramila, Kērala and Gauda, waiting for an opportunity to pay their homage.  
@@ -31,7 +31,7 @@ M AD HÜR Å VIJAY A M
 20. Day by day, waters in the pleasure-lakes in the palace-grounds of the king were found receding further and further from the shores. This made one fancy that they were getting more and more afraid of receiving  
 MADHURAVIJAY AM
 knocks from the breasts of Kuntala damsels who delighted in sporting in them.
-21. The king was delighted with the unadorned faces of his beautiful ladies with the sirīşa wreaths placed on the ear, and pearl-like drops of sweat appearing on them (the faces).  
+21. The king was delighted with the unadorned faces of his beautiful ladies with the sirīṣa wreaths placed on the ear, and pearl-like drops of sweat appearing on them (the faces).  
 22. The king could not contain his emotion when his eyes became transfixed to the braids of hair on the heads of his charming women, which wafted sweet fragrance emanating from the evening-blossoming kutaja flowers with which they were decked.  
 23. The king got over the heat of the day by retiring with the choicest ladies to his summer-house where water-particles sparkling like stars were being sprayed incessantly.  
 24. After summer, came winter which the cataka hirds welcomed with delight, and which, by the flowering of nicula reeds, produced the illusion of chowries.  
@@ -55,7 +55,7 @@ deposits in them exuded the most agreeable odour. The numberless kadainba trees 
 37. The advent of the cloudy season enacted the role of a “romance' confidant to the king in the night time, as it made even the newly married shy girls embrace him at every sound of thunder-murmurings.  
 38. Then came the autumn, the jester that made lotus-clusters laugh, the thief that stole Indra's bow (rain bow), and the treasury officer that set his seal on the mouths of peacocks.  
 39. The season resembled a lion in dispersing the elephant-like clouds. His face was the sun. The kaśas were his manes and the blossoming China roses, his red eyes.  
-40. It was no empty saying that the sun and the moon are the eyes of Vişnu. Now that He has woken up from sleep, these two also opened in their proper splendour.  
+40. It was no empty saying that the sun and the moon are the eyes of Viṣnu. Now that He has woken up from sleep, these two also opened in their proper splendour.  
 41. By reason of the rise of the brilliant Agastya star, the waters were cleared of their muddy condition,  
 M A DHUR Å VIJAY AM
 43
