--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/7.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/7.md
@@ -23,8 +23,8 @@ eve
 13. The globe of the sun, with its lustre gone, rolled, scattered by the ocean waves. Sea-fishes licked it often and often, mistaking it for the broken remains of a fruit.  
 14. Small remnants of light caused hundreds of dark shadows of trees to be cast on the ground. And these looked like the forces of darkness overpowering the army of the sun fleeing in fear.  
 15. The sun, setting out on a journey at the end of the day, entrusted his paritāpa (heat, also distress) to be kept by the hearts of women separated from their lovers, and his brilliance to be safeguarded by herbs (that used to glow at night time.).  
-16. Taking a warning as it were, from the fall on one khaga (the sun, also a bird) because of his over stepping Visnupāda (the feet of Vişnu, also sky), the other khagas (birds) quietly hid themselves in their nests in trees.  
-17. Within closed petal-doors of lotuses which are considered as Lakşmi's dwelling houses, the black bees going round and round, humming, enacted the role of night-watchmen.  
+16. Taking a warning as it were, from the fall on one khaga (the sun, also a bird) because of his over stepping Visnupāda (the feet of Viṣnu, also sky), the other khagas (birds) quietly hid themselves in their nests in trees.  
+17. Within closed petal-doors of lotuses which are considered as Lakṣmi's dwelling houses, the black bees going round and round, humming, enacted the role of night-watchmen.  
 18. The Goddess of Day, sealed, as it were, the closed lotuses with the lac of black-bees sitting close on their surface, with a view to guard the fragrance treasure of honey within.  
 19. The evening twilight was fancied by people as the screen of the stage where the dancer Time, was about to act the part of Night having taken off his dis guise as Day.  
 20. The same twilight raised the momentary vision of a red doublet worn by the region of Varuņa; one also fancied that it should have got its characteristic colour by coming into contact with the dust raised by the hoofs of the sun's horses as they trod on the red layers of the western mountains.
@@ -69,7 +69,7 @@ In Srirangam the lord of serpents is seen warding off the tumbling debris of bri
 When I look at the state of the temples of other gods also, my distress knows no bounds. The foldings of their door are eaten up by wood worms. The arches over their inner sanctuaries are rent with wild growths of vegetation.
 Those temples which were once resonant with the sounds of mridanga drums, are now echoing the fearful howls of jackals.
 The river Kāvēri, uncurbed by proper bunds or dams, has become deflected very much from her time-honoured course, and flows in all sorts of wrong directions as if imitating the Turuskas in their actions.
-The Brāhmin streets, where once the sacrifi cial smoke was ever seen rising, and the chanting of Vēdās always greeted the ears, now exhude the musty odour of meat, and resound with the lion-roars of drunken Turuşkas.
+The Brāhmin streets, where once the sacrifi cial smoke was ever seen rising, and the chanting of Vēdās always greeted the ears, now exhude the musty odour of meat, and resound with the lion-roars of drunken Turuṣkas.
 I very much lament for what has happened to the groves in Madhura. The cocoanut trees have all
 M A DHURAVIJAY A M
 61 been cut and in their place are to be seen rows of iron spikes with human skulls dangling at the points.
@@ -94,12 +94,12 @@ In its shining silver sheath and handle, it looked like a serpent that had recen
 "Do you now proceed to Southern ivíadhura and destroy the cruel king of Yavanas who is the enemy of the world, even as Sri Krsna killed the demo nic Kamsa who once ruled there (viz., Northern Madhura)."
 "Not for the first time will you now be wear ing this bracelet on your hand, which has been (even on prior occasions) the emblem of your vow of protect ing the three worlds, bracelet which none but you can
 wear.”
-“Do you scatter the heads of Turuşkas, heads with those swinging tufts, those blood-shot eyes, those ferocious beards and furious-browed foreheads."
+“Do you scatter the heads of Turuṣkas, heads with those swinging tufts, those blood-shot eyes, those ferocious beards and furious-browed foreheads."
 
 “May the sun of your prowess in battle wipe off the smile of moon-light from the faces of the drunken Yavana ladies.”
 “Dharma is in great distress by being now sub jected to the scorching influence of the evil-natured Yavanas, and earth in consequence looks parched, as it were; and so may you, by the rain of enemies' blood, allay the latter's susserings.”
 “May this sword of yours feast the evil spirits such as katüs, pūtanus and yātudhānas with the blood flowing down from the headless trunks of your evil adversaries.”
-"May you erect many a pillar of triumph in the middle of Rāmasētu by dealing destruction to the Turuşka lord who is wedded to nothing but evil do ings and who therefore is to be regarded as the thorny shrub of the three worlds."
+"May you erect many a pillar of triumph in the middle of Rāmasētu by dealing destruction to the Turuṣka lord who is wedded to nothing but evil do ings and who therefore is to be regarded as the thorny shrub of the three worlds."
 "The Kāvēri like a tamed female elephant will regain her normal course in the proper pace only if when you become supreme Governor, Oh Your Majesty".
 (N. B.—Only the slokas available in the printed book in whole are translated here and as in the original no numbers are given.)
 Thus ends the eighth canto of Virakamparāya çaritam, called Madhurāvijayam, composed by Gangā Dēvi.
