--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
@@ -49,8 +49,8 @@ ing arrows on each other with their bows bent up to their ears.
 28. King Kampa let fly against the Yavana king his arrows that had, like serpents, drunk the life breaths of Këralas, like fire had consumed the lords of the Vanya Kingdom, and like the sun had destroyed the dark Andhras.  
 29. The scratches caused by the Yavana king's arrow on the person of king Kampa shone like the nail marks of the Goddess of Victory that was so passionate to enjoy her privacy.  
 30. The crow banner of the Yavana king which looked like the typification of the crown of Kali age was destroyed by king Kampa, and with that the former's hope of victory also.  
-31. The king, with his arrow, cut the bow-string of the Turuşka king who was, in his fury, raining arrows at the former. It was as if the knife was laid on the auspicious chord round the neck of the Rājya lakşmi (kingly prosperity) of the Turuskas.  
-32. The Turuşka hero blazing with anger, then threw away his bow, and hastily drew out his terrible  
+31. The king, with his arrow, cut the bow-string of the Turuṣka king who was, in his fury, raining arrows at the former. It was as if the knife was laid on the auspicious chord round the neck of the Rājya lakṣmi (kingly prosperity) of the Turuskas.  
+32. The Turuṣka hero blazing with anger, then threw away his bow, and hastily drew out his terrible  
 70
 1 MADHURAVIJAY AM sword that was hanging on the side of his horse's saddle.
 33. Determined to make an end of the Yavana king, king Kampa also armed himself with that sword which Agastya had sent him, and which looked as terri ble as Yama himself.  
