--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
@@ -11,7 +11,7 @@ Slökäs 1 to 13: Queen Devāyi conceives. Her longings during pregnancy are des
 6. Though she was physically unable to walk as far as the pleasure-hill where the deer were quietly  
 MADHURAVIJAY AM
 grazing, she, in her mental flights, was on the tops of the Malāya mountain inhabited by (ferocious) lions.
-7. She heard of Vişnu's miraculous exploits underneath the earth and wanted to imitate Him .... (slöka imperfect).  
+7. She heard of Viṣnu's miraculous exploits underneath the earth and wanted to imitate Him .... (slöka imperfect).  
 8. She laughed at Śiva's valour in reducing Tripura aided by all such paraphernalia as the Earth for the chariot, Brahma for the charioteer, Sesa for the bowstring, the mountain for the bow and Hari for the arrow.  
 9. As time advanced, the limbs of her body began to put on flesh; he face regained its sweet and lazy eye-looks; her beily began to show its folds distinctly; and this change in his beloved filled the king withi delight.  
 10. The auspicious line of hair that was on her abdomen looked like a black serpent on guard in order to protect the infant within.  
@@ -42,7 +42,7 @@ TOO
 as
 1
 16
-MADHURAVIJ A Y AM disc, umbrella, lotus, banner, and fish. His tiny fingers, reddish and soft as tender foliage, were also beautiful to look at. He bore the hairy sign of Śrīvatsa on his breast which suggested that he was an avatāra of Vişnu, and, that unbroken prosperity would mark his life. His forehead was adorned with a circle of hair between the eye-brows. His eyes were large like the petals of blooming lotus. His nose was lofty; and a sweet smile played on his red lips. Altogether, the child's face was surpassingly beautiful.
+MADHURAVIJ A Y AM disc, umbrella, lotus, banner, and fish. His tiny fingers, reddish and soft as tender foliage, were also beautiful to look at. He bore the hairy sign of Śrīvatsa on his breast which suggested that he was an avatāra of Viṣnu, and, that unbroken prosperity would mark his life. His forehead was adorned with a circle of hair between the eye-brows. His eyes were large like the petals of blooming lotus. His nose was lofty; and a sweet smile played on his red lips. Altogether, the child's face was surpassingly beautiful.
 31. Tears of joy, for a while, acted as a check on the steadfast look of his eyes that feasted on the cherubic form of the child.  
 32. The king embraced the child with his eyes; and the excessive emotion in his mind burst out as manifest by horripulation.  
 33. On an auspicious day, the jāta karman rites of the child were performed as directed by the priest, and the child grew in splendour like the god of fire that witnesses those rites.  
