--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/1.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/1.md
@@ -23,7 +23,7 @@ Slokas 1 to 16: Gangā Dēvī's obeisance to the poets who influenced her.
 
 Shlokas 17 to 24: Ganga Dēvi un-literary criticism.
 
-17. There is sense in some, idea in some, and sen timent in some; but nowhere is found a worl: where a!! these exist together.  
+17. There is sense in some, idea in some, and sentiment in some; but nowhere is found a world: where all these exist together.  
 18. Even as a single salt particle from an oyster shell spoils the liquid essence of black sandal, so too, even the smallest flaw found in a poetic work renders it censurable.  
 19. Just as an ugly woman, though virtuous, is not pleasing to her husband, a faultless poetic compo sition, if devoid of qualities (fineness), does not satisfy the man of learning.  
 20. A vile man searches for faults in a poetic composition, in disregard of its merits, even as the crow shows a preference to the nimba (fruit) without caring for the mango in the forest.  
